--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,8 @@ django-templated-mail==1.1.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==5.2.2
 djoser==2.2.0
+drf-extra-fields==3.7.0
+filetype==1.2.0
 idna==3.4
 iniconfig==2.0.0
 isort==5.12.0
@@ -22,7 +24,9 @@ numpy==1.25.1
 oauthlib==3.2.2
 packaging==23.1
 pandas==2.0.3
+Pillow==10.0.0
 pluggy==0.13.1
+psycopg2-binary==2.9.7
 py==1.11.0
 pycodestyle==2.10.0
 pycparser==2.21
