--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,6 +1,32 @@
 version: '3.3'
-services:
+name: foodgram
 
+volumes:
+  static_dir:
+  media_dir:
+  pg_data:
+
+
+services:
+  db:
+    image: postgres:13.0-alpine
+    restart: always
+    volumes:
+      - pg_data:/var/lib/postgresql/data/
+    env_file:
+      - ./.env
+  backend:
+    build: 
+      context: ../backend
+      dockerfile: Dockerfile
+    restart: always
+    volumes:
+      - static_dir:/app/static/
+      - media_dir:/app/media/
+    env_file:
+      - ./.env
+    ports:
+      - '8000:8000'
   frontend:
     build:
       context: ../frontend
@@ -15,3 +41,5 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - static_dir:/var/html/static/
+      - media_dir:/var/html/media/
