--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,9 +1,39 @@
 server {
     listen 80;
+    server_name 127.0.0.1;
+    server_tokens off;
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+
+    location /api/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:8000;
+    }
+
+    location /admin/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:8000/admin/;
+    }
+
+    # admin panel static files may be found in backend's static files
+    location /static/admin {
+        root /var/html/;
+        autoindex on;
+    }
+
+    # consider rest of static files as build by frontend
+    location /static/ {
+        root /usr/share/nginx/html/;
+    }
+
+    location /media/ {
+        root /var/html/;
+         autoindex on;
+    }
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
