--- a/backend/foodgram/requirements.txt
+++ b/backend/foodgram/requirements.txt
@@ -11,6 +11,8 @@ django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 djoser==2.2.0
+drf-extra-fields==3.7.0
+filetype==1.2.0
 idna==3.4
 oauthlib==3.2.2
 Pillow==10.0.0
@@ -23,4 +25,5 @@ requests-oauthlib==1.3.1
 social-auth-app-django==5.3.0
 social-auth-core==4.4.2
 sqlparse==0.4.4
+tzdata==2023.3
 urllib3==2.0.4
