--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,6 +16,9 @@ filetype==1.2.0
 idna==3.4
 oauthlib==3.2.2
 Pillow==10.0.0
+psycopg==3.1.11
+psycopg-binary==3.1.11
+psycopg-pool==3.1.8
 pycparser==2.21
 PyJWT==2.8.0
 python3-openid==3.2.0
@@ -25,5 +28,6 @@ requests-oauthlib==1.3.1
 social-auth-app-django==5.3.0
 social-auth-core==4.4.2
 sqlparse==0.4.4
+typing_extensions==4.8.0
 tzdata==2023.3
 urllib3==2.0.4
