работает фильтр ингридиентов

--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -2,7 +2,7 @@ server {
 
     listen 80;
     server_name 127.0.0.1, localhost
-    server_tokens off;
+    # server_tokens off;
     client_max_body_size 20M;
 
     location /static/admin/ {
