--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -10,9 +10,7 @@ services:
       - ./.env
   
   backend:
-    build:
-      context: ../backend
-      dockerfile: Dockerfile
+    image: olgavik/foodgram_backend
     volumes:
       - data_value:/app/data/
       - static_value:/app/static/
@@ -23,9 +21,7 @@ services:
       - ./.env
   
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: olgavik/foodgram_frontend
     volumes:
       - ../frontend/:/app/result_build/
     depends_on:
@@ -36,7 +32,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx.conf:/etc/nginx/conf.d/default.confls
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
       - ../docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
