--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,8 +1,8 @@
 server {
 
     listen 80;
-    server_name 127.0.0.1, localhost, 158.160.2.66, foodgramov.hopto.org;
-    # server_tokens off;
+    #server_name 127.0.0.1, localhost, 158.160.2.66, foodgramov.hopto.org;
+    server_tokens off;
     client_max_body_size 20M;
 
     location /static/admin/ {
