--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - db
     env_file:
       - ./.env
+    restart: always
   
   frontend:
     image: olgavik/foodgram_frontend
@@ -26,13 +27,14 @@ services:
       - ../frontend/:/app/result_build/
     depends_on:
       - backend
+      - db
   
   nginx:
     image: nginx:1.19.3
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.confls
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
       - ../docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
