--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,12 +85,12 @@ jobs:
       - build_and_push_frontend_to_docker_hub
     steps:
       - name: executing remote ssh commands to deploy
-        uses: appleboy/ssh-action@master
+        uses: appleboy/cps-action@master
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
-          passphrase: ${{ secrets.PASSPHRASE }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
           script: |
             cd infra
             sudo docker compose down
