--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,7 +85,7 @@ jobs:
       - build_and_push_frontend_to_docker_hub
     steps:
       - name: executing remote ssh commands to deploy
-        uses: appleboy/cps-action@master
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
