--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,28 +78,28 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
   
-  deploy:
-    runs-on: ubuntu-latest
-    needs: 
-      - build_and_push_backend_to_docker_hub
-      - build_and_push_frontend_to_docker_hub
-    steps:
-      - name: executing remote ssh commands to deploy
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USER }}
-          key: ${{ secrets.SSH_KEY }}
-          passphrase: ${{ secrets.SSH_PASSPHRASE }}
-          script: |
-            cd infra
-            sudo docker compose down
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
-            touch .env
-            echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} 
-            echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
-            echo DB_HOST=${{ secrets.DB_HOST }} 
-            echo DB_PORT=${{ secrets.DB_PORT }} 
-            sudo docker compose up -d
+ # deploy:
+ #   runs-on: ubuntu-latest
+ #   needs: 
+  #    - build_and_push_backend_to_docker_hub
+  #    - build_and_push_frontend_to_docker_hub
+ #   steps:
+ #     - name: executing remote ssh commands to deploy
+ #       uses: appleboy/ssh-action@master
+  #      with:
+  #        host: ${{ secrets.HOST }}
+   #       username: ${{ secrets.USER }}
+  #        key: ${{ secrets.SSH_KEY }}
+  #        passphrase: ${{ secrets.SSH_PASSPHRASE }}
+   #       script: |
+    #        cd infra
+    #        sudo docker compose down
+   #         sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
+     #       sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
+    #        touch .env
+     #       echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} 
+    #        echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
+    #        echo DB_HOST=${{ secrets.DB_HOST }} 
+    #        echo DB_PORT=${{ secrets.DB_PORT }} 
+    #        sudo docker compose up -d
 
