--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,33 +56,33 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
 
-  build_and_push_frontend_to_docker_hub:
-    name: Pushing frontend image to Docker Hub
-    runs-on: ubuntu-latest
-    needs:
-      - tests
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Login to Docker
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push to Docker Hub
-        uses: docker/build-push-action@v2
-        with:
-          context: ./frontend
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
+#  build_and_push_frontend_to_docker_hub:
+#    name: Pushing frontend image to Docker Hub
+#    runs-on: ubuntu-latest
+#    needs:
+ #     - tests
+  #  steps:
+   #   - name: Check out the repo
+    #    uses: actions/checkout@v3
+     # - name: Set up Docker Buildx
+      #  uses: docker/setup-buildx-action@v2
+      #- name: Login to Docker
+       # uses: docker/login-action@v1
+      #  with:
+       #   username: ${{ secrets.DOCKER_USERNAME }}
+        #  password: ${{ secrets.DOCKER_PASSWORD }}
+     # - name: Push to Docker Hub
+      #  uses: docker/build-push-action@v2
+      #  with:
+       #   context: ./frontend
+        #  push: true
+         # tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
   
   deploy:
     runs-on: ubuntu-latest
     needs: 
       - build_and_push_backend_to_docker_hub
-      - build_and_push_frontend_to_docker_hub
+#      - build_and_push_frontend_to_docker_hub
     steps:
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
